kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: klub-ada
spec:
  selector:
    app: klub-ada
  ports:
    - protocol: TCP
      port: 80
