kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: klub-ada
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - hack.klub-ada.si
        - klub-ada.si
      secretName: klub-ada-tls
  rules:
    - host: hack.klub-ada.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: klub-ada
                port:
                  number: 3000
    - host: klub-ada.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: klub-ada
                port:
                  number: 3000
